# ebc-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/shaders/: accumulation.wgsl  angular_histogram.wgsl  canny.wgsl  centroid.wgsl  cm_contrast.wgsl  cm_select.wgsl  cm_warp.wgsl  cmax_optimization.wgsl  cmax_slam_output.wgsl  cmax_slam_reduce.wgsl  cmax_slam_warp.wgsl  composite.wgsl  ground_truth.wgsl  log.wgsl  preprocess.wgsl  radial_profile.wgsl  sobel.wgsl  spatial_gradient.wgsl  visualizer.wgsl
config/: detectors.toml
docs/: 2025-01-24-mvp-edge-detection.md  GROUND_TRUTH_USAGE.md  HYPERPARAMETER_OPTIMIZATION_PLAN.md  debug_plan_cm.md  sensofusion_challenge.md  testing-accuracy.md
docs/debug-logs/: 2025-11-24-angular-histogram-diagnostics.md
docs/design/: 2025-11-23-fan-visualization-accuracy-design.md  2025-11-26-compare-live-ui-fixes.md  CLEANUP_PLAN.md  EDGE_DETECTORS_PLAN.md  NEXT_STEPS_PLAN.md  REFACTOR_PLAN.md  cmax-slam-evaluation.md  mvp_plan.md
docs/guides/: 01-project-setup.md  02-gpu-pipeline-architecture.md  (+2 more)
results/: best_canny.json  best_log.json  best_sobel.json  ground_truth_comparison.csv  gt_comparison.csv  gt_final.csv  search.csv  synthetic_comparison.csv  synthetic_comparison2.csv  synthetic_search.csv  tolerance_test.csv
src/: analysis.rs  edge_detection.rs  event_renderer.rs  gizmos.rs  gpu.rs  ground_truth.rs  hyperparams.rs  lib.rs  loader.rs  main.rs  metrics.rs  playback.rs  plugins.rs  render.rs  synthesis.rs  tests.rs
tests/: accuracy_test.rs  accuracy_test.rs.disabled  detector_comparison.rs  regression_cmax_slam.rs
(+60 files in other folders)
