[package]
name = "ebc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bevy = "0.17"
bytemuck = "1.24.0"
clap = { version = "4.5.53", features = ["derive"] }
rayon = "1.10"
memmap2 = "0.9.9"
bevy_egui = "0.38"
bevy_framepace = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23.0"
